--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==2.1.0
 aiofiles==23.2.1
 altair==4.2.0
+aniso8601==9.0.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyio==4.4.0
@@ -39,6 +40,8 @@ filelock==3.15.4
 flake8==7.1.1
 Flask==3.0.3
 Flask-Cors==5.0.0
+flask-restplus==0.13.0
+flask-restx==1.3.0
 flatbuffers==24.3.25
 fonttools==4.53.1
 fpdf==1.7.2
