added new requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ WebApplication/node_modules/
 StreamlitApplication/reports/
 StreamlitApplication/temp/
 StreamlitApplication/uploads/
-deeptracers-venv/
+deeptracer-venv/
 SampleDatasets/
 Audiovisualmodel/weights/
 Backend/media/
